fixing ugly today's hours spacing

--- a/sites/all/themes/library_bootstrap_subtheme/less/style.less
+++ b/sites/all/themes/library_bootstrap_subtheme/less/style.less
@@ -661,7 +661,7 @@ h3 {
 	}
 	a {
 		text-transform:uppercase;
-		display:block;
+		display:inline-block;
 	}
 	a:last-of-type {
 		text-decoration:underline;
